<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/settings_lang_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_lang" />

        <Button
            android:id="@+id/settings_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_profile" />

        <Button
            android:id="@+id/change_color_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_theme" />

        <Button
            android:id="@+id/settings_exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_back"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>