<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_profile_image"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pic" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#00000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/profile_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/profile_share_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/profile_copyID" />

        <Button
            android:id="@+id/profile_exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/app_back" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>