<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundJogo"
    style="@style/Widget.MaterialComponents.Toolbar.Primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#ffffff"
    tools:context=".GameOnline">


    <Button
        android:id="@+id/button_sair"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:layout_marginBottom="28dp"
        android:text="@string/app_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/symbol3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blank1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blank2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/symbol8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blank3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blank4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#FFFFFF"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/symbol12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="75dp"
                android:background="@drawable/boarder"
                android:backgroundTint="#B2DFDB"
                android:gravity="center"
                android:padding="12sp"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/novo_jogo"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:layout_marginBottom="92dp"
        android:text="@string/main_restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/level"
        android:layout_width="339dp"
        android:layout_height="144dp"
        android:background="@drawable/boarder"
        android:backgroundTint="@color/teal_800"
        android:fontFamily="sans-serif-medium"
        android:text="@string/main_level"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <TextView
        android:id="@+id/tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_time"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/timer"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toTopOf="@+id/level"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_points"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/pontos"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/timer"
        app:layout_constraintTop_toTopOf="@+id/level"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toTopOf="@+id/level"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/pontos"
        android:layout_width="48dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/timer"
        app:layout_constraintTop_toTopOf="@+id/level"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/nivel"
        android:layout_width="38dp"
        android:layout_height="31dp"
        android:layout_marginEnd="86dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/points"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="@+id/points"
        app:layout_constraintTop_toTopOf="@+id/level"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="301dp"
        android:layout_height="45dp"
        android:text="@string/main_expressions_10"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toEndOf="@+id/level"
        app:layout_constraintStart_toStartOf="@+id/level"
        app:layout_constraintTop_toBottomOf="@+id/points" />

</androidx.constraintlayout.widget.ConstraintLayout>